[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/board.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/start_screen.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/GUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/world.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/fade_to_black.gd" type="Script" id=5]
[ext_resource path="res://scripts/Game.gd" type="Script" id=6]
[ext_resource path="res://fonts/munro.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 8 )

[node name="Game" type="Node"]
script = ExtResource( 6 )

[node name="world" parent="." instance=ExtResource( 4 )]

[node name="game_board" parent="." instance=ExtResource( 1 )]
position = Vector2( 150, 0 )

[node name="camera" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
smoothing_enabled = true

[node name="start_screen" parent="." instance=ExtResource( 2 )]
visible = true

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 7.55952
margin_top = 7.55952
margin_right = 142.56
margin_bottom = 21.5595
custom_fonts/font = SubResource( 1 )
text = "Click to continue..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUI" parent="." instance=ExtResource( 3 )]

[node name="fade_to_black" type="CanvasLayer" parent="."]
script = ExtResource( 5 )

[node name="color_rect" type="ColorRect" parent="fade_to_black"]
modulate = Color( 0, 0, 0, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="fade_to_black"]
[connection signal="game_end" from="game_board" to="." method="_on_game_board_game_end"]
[connection signal="click" from="start_screen" to="." method="_on_start_screen_click"]
[connection signal="dialogue_done" from="GUI" to="." method="_on_GUI_dialogue_done"]
[connection signal="fade_ended" from="fade_to_black" to="." method="_on_game_end"]
